content/static: fix spacing between links in right sidebar
Screenshot: https://photos.app.goo.gl/djZcwfA8mDtRGQzy7

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/275876
Trust: Julie Qiu <julie@golang.org>
Trust: Jamal Carvalho <jamal@golang.org>
Run-TryBot: Julie Qiu <julie@golang.org>

--- a/content/static/css/unit_meta.css
+++ b/content/static/css/unit_meta.css
@@ -9,6 +9,7 @@
 }
 .UnitMeta a {
   display: block;
+  margin-bottom: 1rem;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
